Claim prototypes update
Adding details to the prototypes

--- a/app/views/ftf/claim/Archive/check files list.html
+++ b/app/views/ftf/claim/Archive/check files list.html
@@ -1,6 +1,6 @@
 {% extends "layouts/main.html" %}
 
-{% set pageName="Home" %}
+{% set pageName="Check your claim" %}
 
 {% block content %}
 
@@ -26,6 +26,8 @@
 
     <span class="govuk-caption-xl">Claim for a Water Management Grant</span>
     <h1 class="govuk-heading-xl">Check your claim</h1>
+    <span class="govuk-body">Review your form and evidence before submitting your claim.<br><br>
+
 
 <br><br>
 
@@ -148,9 +150,14 @@
       </div>
 
 <br><br><br><br>
-      <button class="govuk-button" data-module="govuk-button">
-        Continue
-      </button>
+
+      <a href="activity3.html">
+        <button class="govuk-button" data-module="govuk-button">
+          Continue
+        </button>
+      </a>
+
+
 
 
 </main>
