--- a/app/views/ftf/claim/index.html
+++ b/app/views/ftf/claim/index.html
@@ -1,9 +1,8 @@
-{% extends "layouts/main.html" %}
+{% extends "layouts/main-agreement-round-2.html" %}
 
 {% set pageName="Home" %}
 
 {% block content %}
-
 
 
 <main class="govuk-main-wrapper">
@@ -11,97 +10,25 @@
   <div class="govuk-grid-column-two-thirds">
 
 
+    <span class="govuk-caption-xl">September 2023</span>
+    <h1 class="govuk-heading-xl">
+      Claim
+    </h1>
 
-<p class="govuk-body"><strong>Subject:</strong> Start your application - FTF Water Management</p>
-<hr style="margin: 20px 0;">
-<p class="govuk-body"><strong>From:</strong> FTF@rpa.gov.uk</p>
-<hr style="margin: 20px 0;">
-<br>
-<img src="/public/images/rpa_logo.png" alt="Small screenshot showing page one of the grant funding agreement.">
+    <h2 class="govuk-heading-l">Prototypes</h2>
 
+    <p class="govuk-body-l">Scenario: Start your first claim</p><br>
+    
+    <p class="govuk-body"><strong>FTF Claim v2.1: Types of evidence</strong></p>
+    <p class="govuk-body"><a href="/ftf/claim/v2-1/index">Click to open protoype</a></p>
 
-<br><br><br>
-
-<ul class="govuk-list">
-<li>
-  <strong>Business name:</strong> Imaginary Farms Ltd</p>
-  <strong>Project reference:</strong> WM-VMA-1234</p>
-  <strong>Grant:</strong> Farming Transformation Fund Water Management Grant Round 3</p>
-  <strong>Subject:</strong> Start your application - FTF Water Management</p>
-</li>
-
-<br><br>
-
-
-Dear John Smith,<br><br>
-Your expression of interest has been accepted.<br><br>
-You can now start your full application.
-
-<hr style="margin: 50px 0;">
-
-
-<h3 class="govuk-heading-m">What you need to do</h3>
-
-<a class="govuk-link" href="#high-fidelity-design">Download and complete the application form and appendix.</a>
-
-<br><br>
-
-  <p class="govuk-body">Read more on <a href="https://app.mural.co/t/dcx6016/m/dcx6016/1680772774235/818de9cbf49a0707a8fe625bbf1ce9bdaaac6440?sender=u6609daa1d6d5f14bc3eb0833" target="_blank">how to fill in a grant application form (opens in new tab)</a></p>
-
-  <hr style="margin: 50px 0;">
-
-  <h3 class="govuk-heading-m">Evidence you need to apply</h3>
-
-  <p class="govuk-body">You should <a href="https://app.mural.co/t/dcx6016/m/dcx6016/1680772774235/818de9cbf49a0707a8fe625bbf1ce9bdaaac6440?sender=u6609daa1d6d5f14bc3eb0833" target="_blank">check the grant manual (opens in a new tab)</a>  to confirm what evidence you need to provide.</p>
-  
-  <br>
-    <p class="govuk-body">Evidence could include:<br>
-      <ul class="govuk-list govuk-list--bullet">
-        <li>financial accounts</li>
-        <li>linked businesses and their accounts</li>
-        <li>licences and permissions</li>
-        <li>project funding</li>
-        <li>quotes and tenders</li>
-        <li>VAT in project costs</li>
-        <li>plans and drawings</li>
-        <li>third-party agreements</li>
-        <li>letters of support</li>
-      </ul>
-    </p>
-
-    <hr style="margin: 50px 0;">
-
-
-
-
-
-
-     <h3 class="govuk-heading-m">If you have questions about your claim</h3>
-
-
-     <p class="govuk-body">If you have any questions about your claim, call the RPA and follow the options for the Farming Transformation Fund scheme.</p>
-     <p class="govuk-body"><strong>Telephone</strong><br>
-      Telephone: 03000 200 301<br> 
-      Monday to Friday, 8:30am to 5pm (except public holidays)<br>
-    <a href="...">Find out about call charges (opens in a new tab)</a><br><br>
-     
-    <strong>Email</strong><br>
-    <a href="...">GSClaimqueries@rpa.gov.uk</a></p>
-
-
-      
-<br><br>
-Yours sincerely,<br><br>
-Rural Payment Agency
-
-
-<hr style="margin: 50px 0;">
-
-
-<small> for Environment, Food and Rural Affairs (Defra) This email and any attachments is intended for the named recipient only. If you have received it in error you have no authority to use, disclose, store or copy any of its contents and you should destroy it and inform the sender. Whilst this email and associated attachments will have been checked for known viruses whilst within Defra systems we can accept no responsibility once it has left our systems. Communications on Defra's computer systems may be monitored and/or recorded to secure the effective operation of the system and for other lawful purposes.</small>
-
-
-</span>
+    <hr style="margin: 40px 0;">
+    <p class="govuk-body"><strong>FTF Claim v2.2: Proof of evidence</strong></p>
+    <p class="govuk-body"><a href="/ftf/claim/v2-2/upload2">Click to open prototype</a></p>
+    
+    <hr style="margin: 40px 0;">
+    <p class="govuk-body"><strong>FTF Claim v2.3: Pages of evidence</strong></p>
+    <p class="govuk-body"><a href="/ftf/claim/v2-3/upload2">Click to open prototype</a></p>
 
   </div>
 </div>
