--- a/app/views/ftf/claim/v2-1/confirmation.html
+++ b/app/views/ftf/claim/v2-1/confirmation.html
@@ -1,10 +1,21 @@
 {% extends "layouts/main.html" %}
 
-{% set pageName="Home" %}
+{% set pageName="Confirmation" %}
 
 {% block content %}
 
-<br><br>
+<div class="govuk-phase-banner">
+  <p class="govuk-phase-banner__content">
+    <strong class="govuk-tag govuk-phase-banner__content__tag">
+      Alpha
+    </strong>
+    <span class="govuk-phase-banner__text">
+      This is a new service – your <a class="govuk-link" href="../index.html">feedback</a> will help us to improve it.
+    </span>
+  </p>
+</div>
+
+<br>
 <div class="govuk-width-container">
   <main class="govuk-main-wrapper govuk-main-wrapper--l" id="main-content" role="main">
     <div class="govuk-grid-row">
@@ -31,17 +42,17 @@
         <p class="govuk-body"><strong>Telephone</strong><br>
          Telephone: 03000 200 301<br> 
          Monday to Friday, 8:30am to 5pm (except public holidays)<br>
-       <a href="...">Find out about call charges (opens in a new tab)</a><br><br>
+       <a href="/_common/not-testing.html">Find out about call charges (opens in a new tab)</a><br><br>
         
        <strong>Email</strong><br>
-       <a href="...">GSClaimqueries@rpa.gov.uk</a></p>
+       <a href="/_common/not-testing.html">GSClaimqueries@rpa.gov.uk</a></p>
 
 
        <br><br>
 
        <p class="govuk-body">
-       <a href="...">Print this page</a><br><br>
-       <a href="...">Go back to the grant task list</a></p>
+       <a href="/_common/not-testing.html">Print this page</a><br><br>
+       <a href="activity4.html">Go back to the grant task list</a></p>
       </p>
 
        
