--- a/app/views/index.html
+++ b/app/views/index.html
@@ -58,9 +58,17 @@
     <span class="content-section">
     <h3 class="govuk-heading-m">Phase: Application</h3>
 
-    <h4 class="govuk-heading-s">User Research - Round 1 (September 2023)</h4>
-    <p class="govuk-body">Prototype (Figma):</p>
-    <br>
+
+    
+    <h4 class="govuk-heading-s">User Research - Round 1 (August 2023)</h4>
+<p class="govuk-body">Prototype (Figma):<br>
+  <ul class="govuk-list govuk-list--bullet">
+    <li><a href="https://www.figma.com/proto/Z1i53yz6r8Eijed6ATBwze/Future-Grants---Transactional-journey-designs?page-id=1264%3A86087&type=design&node-id=2284-132338&viewport=836%2C3368%2C0.07&t=dc8R74EyqfwsLOZr-1&scaling=min-zoom&starting-point-node-id=2284%3A132338&show-proto-sidebar=1&mode=design" target="_blank">FTF Application v1 (opens in new tab)</a></li>
+  </ul><br>
+</p>
+    
+   
+
     <p class="govuk-body">Research findings:</p>
     </span>
 
@@ -95,15 +103,25 @@
 <p class="govuk-body">Research findings:</p>
 </span>
 
-
-
-
-
 <h3 class="govuk-heading-m">Phase: Claims</h3>
 
-<h4 class="govuk-heading-s">User Research - Round 1 (September 2023)</h4>
-<p class="govuk-body">Prototype (Figma):</p>
-<br>
+<h4 class="govuk-heading-s">User Research - Round 2 (October 2023)</h4>
+<p class="govuk-body">Prototypes (Heroku):<br>
+  <ul class="govuk-list govuk-list--bullet">
+    <li><a href="/ftf/claim/v2-1/" target="_blank">FTF Claim v2.1: Types of evidence (opens in new tab)</a></li>
+    <li><a href="/ftf/claim/v2-2/" target="_blank">FTF Claim v2.2: Proof of evidence (opens in new tab)</a></li>
+    <li><a href="/ftf/claim/v2-3/" target="_blank">FTF Claim v2.3: Pages of evidence (opens in new tab)</a></li>
+  </ul><br>
+</p>
+
+
+<h4 class="govuk-heading-s">User Research - Round 1 (August 2023)</h4>
+<p class="govuk-body">Prototype (Figma):<br>
+  <ul class="govuk-list govuk-list--bullet">
+    <li><a href="https://www.figma.com/proto/Z1i53yz6r8Eijed6ATBwze/Future-Grants---Transactional-journey-designs?page-id=747%3A37394&type=design&node-id=1713-113946&viewport=378%2C1431%2C0.03&t=TjYeQEiFgssaGyhI-1&scaling=min-zoom&starting-point-node-id=1713%3A113946&show-proto-sidebar=1&mode=design" target="_blank">FTF Claim v1 (opens in new tab)</a></li>
+  </ul><br>
+</p>
+
 <p class="govuk-body">Research findings:</p>
 
 <hr id="low-fidelity-design" style="margin: 40px 0;">
