--- a/app/views/ftf/claim/v2-2/activity4.html
+++ b/app/views/ftf/claim/v2-2/activity4.html
@@ -55,10 +55,10 @@
         Water Management Grant – Round 3
       </h1>
 
-      <h2 class="govuk-heading-s govuk-!-margin-bottom-2">First grant claim window is open</h2>
+      <h2 class="govuk-heading-s govuk-!-margin-bottom-2">First claim under review</h2>
 
       <div class="govuk-inset-text">
-        Submit your claim by <strong>31 July 2024</strong>.
+        The RPA aims to process claims within <strong>30 working days</strong>.
       </div>
 
 
