--- a/app/views/ftf/claim/v2-3/activity4.html
+++ b/app/views/ftf/claim/v2-3/activity4.html
@@ -8,10 +8,6 @@
 
 
 
-
-
-
-
 <div class="govuk-phase-banner">
   <p class="govuk-phase-banner__content">
     <strong class="govuk-tag govuk-phase-banner__content__tag">
@@ -22,8 +18,6 @@
     </span>
   </p>
 </div>
-
-
 
 <div class="govuk-width-container">
   <main class="govuk-main-wrapper" style="padding-top: 0px; padding-bottom: 0px;">
@@ -43,10 +37,6 @@
 <br><br>
 
 
-
-
-
-
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       
@@ -55,10 +45,10 @@
         Water Management Grant – Round 3
       </h1>
 
-      <h2 class="govuk-heading-s govuk-!-margin-bottom-2">First grant claim window is open</h2>
+      <h2 class="govuk-heading-s govuk-!-margin-bottom-2">First claim under review</h2>
 
       <div class="govuk-inset-text">
-        Submit your claim by <strong>31 July 2024</strong>.
+        The RPA aims to process claims within <strong>30 working days</strong>.
       </div>
 
 
